tests/NormalTests/paczka2/big_fuzzy/84750026.err
Error in line 1: bUXK4GF A911 36,4
Error in line 4: Z29sdE A911 3,0
Error in line 6: Z29sdE A546 82,2
Error in line 19: fLzTyP S133 91,7
Error in line 20: Z29sdE A911 4,6
Error in line 29: S133 A546 51,0
Error in line 35: bUXK4GF A848 9,0
Error in line 36: Sp2 A546 74,7
Error in line 54: S133 S133 176,94
Error in line 39: S133 S133 41,6
Error in line 58: bUXK4GF A546 71,2
Error in line 55: ynBQ S133 20,1
Error in line 68: S133 S133 7,5
Error in line 70: bUXK4GF S133 -1,1
Error in line 90: Sp2 A546 71,0
Error in line 91: PQPJ A848 74,3
Error in line 94: PQPJ A546 23,1
Error in line 93: fLzTyP A911 21,3
Error in line 65: bUXK4GF S133 46,5
Error in line 95: PQPJ A911 43,6
Error in line 109: ynBQ A911 83,8
Error in line 114: PQPJ A546 88,4
Error in line 117: PQPJ A911 96,5
Error in line 125: PQPJ A046 78,1
Error in line 126: PQPJ A546 371,0
Error in line 122: ynBQ A848 77,4
Error in line 138: PQPJ A848 83,36
Error in line 124: bUXK4GF A848 80,3
Error in line 142: S133 A848 34,7
Error in line 149: Z29sdE A848 17,3
Error in line 154: bUXK4GF A911 121,6
Error in line 158: bUXK4GF A911 19,0
Error in line 166: fLzTyP A546 88,4
Error in line 129: PQPJ A848 88,9
Error in line 171: Z29sdE S133 173,1
Error in line 176: Z29sdE A848 10,0
Error in line 181: Z29sdE A911 58,49
Error in line 184: fLzTyP S133 63,1
Error in line 177: Z29sdE A911 63,0
Error in line 200: PQPJ A911 60,3
Error in line 183: bUXK4GF A546 114,7
Error in line 191: Z29sdE A848 13,2
Error in line 206: Z29sdE A911 9,8
Error in line 212: Sp2 S133 75,0
Error in line 245: S133 A546 68,3
